[package]
name = "ast2str-derive"
version = "0.3.2"
authors = ["OptimalStrategy <17456182+OptimalStrategy@users.noreply.github.com>"]
edition = "2018"
homepage = "https://github.com/optimalstrategy/ast2str"
repository = "https://github.com/optimalstrategy/ast2str"
license = "MIT"
description = "A crate for pretty-printing ASTs and other recursive data structures."
documentation = "https://docs.rs/ast2str"


[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.64", features = ["full"] }
quote = "1.0.9"
proc-macro2 = "1.0"
