[package]
name = "ast2str-lib"
version = "1.1.0"
authors = ["OptimalStrategy <17456182+OptimalStrategy@users.noreply.github.com>"]
edition = "2018"
homepage = "https://github.com/optimalstrategy/ast2str"
repository = "https://github.com/optimalstrategy/ast2str"
license = "MIT"
description = "A crate for pretty-printing ASTs and other recursive data structures."
documentation = "https://docs.rs/ast2str"

[dependencies]

[dev-dependencies]
pretty_assertions = "0.7.2"
