[package]
name = "ast2str"
version = "1.1.0"
authors = ["OptimalStrategy <17456182+OptimalStrategy@users.noreply.github.com>"]
edition = "2018"
homepage = "https://github.com/optimalstrategy/ast2str"
repository = "https://github.com/optimalstrategy/ast2str"
license = "MIT"
description = "A crate for pretty-printing ASTs and other recursive data structures."
documentation = "https://docs.rs/ast2str"

[dependencies]
ast2str_lib = { version = "1.1.0", package = "ast2str-lib" }
ast2str_derive = { version = "0.2.2", package = "ast2str-derive" }

[dev-dependencies]
pretty_assertions = "0.7.2"
